# HabitLab

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
beaverhabits/: configs.py  logger.py  main.py  utils.py
beaverhabits/app/: app.py  auth.py  crud.py  db.py  dependencies.py
beaverhabits/core/: note.py
beaverhabits/routes/: api.py  metrics.py  pages.py
beaverhabits/static/: manifest.json
beaverhabits/static/css/: styles.css
beaverhabits/static/js/: api.js  app.js  calendar.js  habits.js  heatmap.js  notes.js  stats.js
beaverhabits/storage/: __init__.py  dict.py  storage.py  user_db.py
beaverhabits/templates/: _habit_form_template.html  _habit_modal.html  _note_modal.html  _settings_modal.html  base.html  habit_detail.html  heatmap.html  index.html  login.html  stats.html
docs/superpowers/plans/: 2026-04-27-frontend-rewrite.md
docs/superpowers/specs/: 2026-04-27-frontend-rewrite-design.md
tests/: conftest.py  test_api_tokens.py  test_apis.py  test_stats.py  test_stats_overview.py
